--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.2.1",
+    "recharts": "^2.12.7",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
