--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.408.0",
+    "luxon": "^3.4.4",
     "next": "14.2.4",
+    "randomcolor": "^0.6.2",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
@@ -35,7 +37,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20",
+    "@types/randomcolor": "^0.5.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
