--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "card-validator": "^10.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.408.0",
     "luxon": "^3.4.4",
     "next": "14.2.4",
@@ -37,6 +38,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
     "@types/luxon": "^3.4.2",
     "@types/node": "^20",
     "@types/randomcolor": "^0.5.9",
